[package]
name = "test_db"
version = "0.1.0"
edition = "2024"

[dependencies]
rusqlite = { version = "0.37.0", features = ["bundled"] }
warp = { version = "0.4.2", features = ["server"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bcrypt = "0.17.1"
